// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`json-viewer should be match array content 1`] = `
NodeList [
  <style>
    :host{--main-bg-color: #3a3c44;--main-color: #eee;--string-text-color: #f29766;--number-text-color: #77eda4;--boolean-text-color: #ed77e5;--null-text-color: #fff;position:relative;display:block;padding:.5rem 1rem;background-color:var(--main-bg-color);color:var(--main-color);font:400 14px/1.2rem monospace;text-rendering:optimizelegibility}:host .se_c4f6de .li_e8499a{display:block;white-space:nowrap;word-wrap:break-word}:host .se_c4f6de .li_e8499a .to_a744e4{display:inline-block;margin-top:-1px;margin-right:.2rem;margin-left:-0.47rem;width:1rem;height:1rem;color:#787878;vertical-align:middle}:host .se_c4f6de .li_e8499a .to_a744e4 .pl_9ef1da,:host .se_c4f6de .li_e8499a .to_a744e4 .mi_4a8d0b{fill:#787878}:host .se_c4f6de .li_e8499a .br_6fc46c{color:#898989}:host .se_c4f6de .li_e8499a .ke_df9ddf{color:#cfd0d0}:host .se_c4f6de .li_e8499a .se_830216{margin:0 6px 0 2px;color:#898989}:host .se_c4f6de .li_e8499a .si_94a13e{margin-left:8px;color:#747272;font-size:.8rem;font-style:italic;user-select:none;vertical-align:middle}:host .se_c4f6de .li_e8499a .va_2c711f[data-type=string]{color:var(--string-text-color)}:host .se_c4f6de .li_e8499a .va_2c711f[data-type=number]{color:var(--number-text-color)}:host .se_c4f6de .li_e8499a .va_2c711f[data-type=boolean]{color:var(--boolean-text-color)}:host .se_c4f6de .li_e8499a .va_2c711f[data-type=null],:host .se_c4f6de .li_e8499a .va_2c711f[data-type=undefined]{color:var(--null-text-color)}:host .se_c4f6de .li_e8499a .va_2c711f[data-type=array],:host .se_c4f6de .li_e8499a .va_2c711f[data-type=object]{overflow:hidden;width:90%;color:#747272;font-size:.8rem;font-style:italic;vertical-align:middle}:host .se_c4f6de&gt;.li_e8499a{cursor:pointer}:host .se_c4f6de&gt;.li_e8499a:hover&gt;.ke_df9ddf{color:#e7e7e7}:host .se_c4f6de&gt;.li_e8499a:hover&gt;.to_a744e4 .pl_9ef1da,:host .se_c4f6de&gt;.li_e8499a:hover&gt;.to_a744e4 .mi_4a8d0b{fill:#979797}:host .se_c4f6de&gt;.ch_fd9797{padding-left:1rem;border-left:1px dotted #585855}:host .se_c4f6de&gt;.ch_fd9797[data-type=array]&gt;.li_e8499a&gt;.ke_df9ddf,:host .se_c4f6de&gt;.ch_fd9797[data-type=array]&gt;.li_e8499a&gt;.se_830216{color:#747272;user-select:none}:host .se_c4f6de[aria-expanded=true]&gt;.li_e8499a&gt;.to_a744e4 .pl_9ef1da{display:none}:host .se_c4f6de[aria-expanded=true]&gt;.li_e8499a&gt;.to_a744e4 .mi_4a8d0b{display:inline-block}:host .se_c4f6de[aria-expanded=true]&gt;.li_e8499a&gt;.va_2c711f{display:none}:host .se_c4f6de[aria-expanded=false]&gt;.li_e8499a&gt;.to_a744e4 .pl_9ef1da{display:inline-block}:host .se_c4f6de[aria-expanded=false]&gt;.li_e8499a&gt;.to_a744e4 .mi_4a8d0b{display:none}:host .se_c4f6de[aria-expanded=false]&gt;.li_e8499a&gt;.va_2c711f{display:inline-block}:host .se_c4f6de[aria-expanded=false]&gt;.li_e8499a&gt;.br_6fc46c,:host .se_c4f6de[aria-expanded=false]&gt;.li_e8499a&gt;.si_94a13e,:host .se_c4f6de[aria-expanded=false]&gt;.li_e8499a&gt;.to_a744e4 .mi_4a8d0b,:host .se_c4f6de[aria-expanded=false]&gt;:last-child,:host .se_c4f6de[aria-expanded=false]&gt;.ch_fd9797{display:none}:host .se_c4f6de:hover&gt;.ch_fd9797{border-color:#858580}:host .se_c4f6de:hover&gt;.li_e8499a&gt;.br_6fc46c{color:#fffff7}
  </style>,
  <section
    class="se_c4f6de"
  >
    <div
      class="li_e8499a"
    >
      <svg
        class="to_a744e4"
        height="20"
        viewBox="0 0 1792 1792"
        width="20"
      >
        <path
          class="mi_4a8d0b"
          d="M1344 800v64q0 14-9 23t-23 9h-832q-14 0-23-9t-9-23v-64q0-14 9-23t23-9h832q14 0 23 9t9 23zm128 448v-832q0-66-47-113t-113-47h-832q-66 0-113 47t-47 113v832q0 66 47 113t113 47h832q66 0 113-47t47-113zm128-832v832q0 119-84.5 203.5t-203.5 84.5h-832q-119 0-203.5-84.5t-84.5-203.5v-832q0-119 84.5-203.5t203.5-84.5h832q119 0 203.5 84.5t84.5 203.5z"
        />
        <path
          class="pl_9ef1da"
          d="M1344 800v64q0 14-9 23t-23 9h-352v352q0 14-9 23t-23 9h-64q-14 0-23-9t-9-23v-352h-352q-14 0-23-9t-9-23v-64q0-14 9-23t23-9h352v-352q0-14 9-23t23-9h64q14 0 23 9t9 23v352h352q14 0 23 9t9 23zm128 448v-832q0-66-47-113t-113-47h-832q-66 0-113 47t-47 113v832q0 66 47 113t113 47h832q66 0 113-47t47-113zm128-832v832q0 119-84.5 203.5t-203.5 84.5h-832q-119 0-203.5-84.5t-84.5-203.5v-832q0-119 84.5-203.5t203.5-84.5h832q119 0 203.5 84.5t84.5 203.5z"
        />
      </svg>
      <span
        class="va_2c711f"
        data-type="array"
      >
        Array[2] [{"string":"this is a test ...","integer":42,"array":[1,2,3,"NaN"],"float":3.141,"undefined":"undefined","object":{"first-child":true,"second-child":false,"last-child":"null"},"string_number":"1234"},{"string":"this is a test ...","integer":42,"array":[1,2,3,"NaN"],"float":3.141,"undefined":"undefined","object":{"first-child":true,"second-child":false,"last-child":"null"},"string_number":"1234"}]
      </span>
      <span
        class="br_6fc46c"
      >
        [
      </span>
    </div>
    <section
      class="ch_fd9797"
      data-type="array"
    >
      <section
        class="se_c4f6de"
      >
        <div
          class="li_e8499a"
        >
          <svg
            class="to_a744e4"
            height="20"
            viewBox="0 0 1792 1792"
            width="20"
          >
            <path
              class="mi_4a8d0b"
              d="M1344 800v64q0 14-9 23t-23 9h-832q-14 0-23-9t-9-23v-64q0-14 9-23t23-9h832q14 0 23 9t9 23zm128 448v-832q0-66-47-113t-113-47h-832q-66 0-113 47t-47 113v832q0 66 47 113t113 47h832q66 0 113-47t47-113zm128-832v832q0 119-84.5 203.5t-203.5 84.5h-832q-119 0-203.5-84.5t-84.5-203.5v-832q0-119 84.5-203.5t203.5-84.5h832q119 0 203.5 84.5t84.5 203.5z"
            />
            <path
              class="pl_9ef1da"
              d="M1344 800v64q0 14-9 23t-23 9h-352v352q0 14-9 23t-23 9h-64q-14 0-23-9t-9-23v-352h-352q-14 0-23-9t-9-23v-64q0-14 9-23t23-9h352v-352q0-14 9-23t23-9h64q14 0 23 9t9 23v352h352q14 0 23 9t9 23zm128 448v-832q0-66-47-113t-113-47h-832q-66 0-113 47t-47 113v832q0 66 47 113t113 47h832q66 0 113-47t47-113zm128-832v832q0 119-84.5 203.5t-203.5 84.5h-832q-119 0-203.5-84.5t-84.5-203.5v-832q0-119 84.5-203.5t203.5-84.5h832q119 0 203.5 84.5t84.5 203.5z"
            />
          </svg>
          <span
            class="ke_df9ddf"
          >
            "0"
          </span>
          <span
            class="se_830216"
          >
            :
          </span>
          <span
            class="va_2c711f"
            data-type="object"
          >
            Object {"string":"this is a test ...","integer":42,"array":[1,2,3,"NaN"],"float":3.141,"undefined":"undefined","object":{"first-child":true,"second-child":false,"last-child":"null"},"string_number":"1234"}
          </span>
          <span
            class="br_6fc46c"
          >
            {
          </span>
        </div>
        <section
          class="ch_fd9797"
          data-type="object"
        >
          <div
            class="li_e8499a"
          >
            <span
              class="ke_df9ddf"
            >
              "string"
            </span>
            <span
              class="se_830216"
            >
              :
            </span>
            <span
              class="va_2c711f"
              data-type="string"
            >
              "this is a test ..."
            </span>
            ,
          </div>
          <div
            class="li_e8499a"
          >
            <span
              class="ke_df9ddf"
            >
              "integer"
            </span>
            <span
              class="se_830216"
            >
              :
            </span>
            <span
              class="va_2c711f"
              data-type="number"
            >
              42
            </span>
            ,
          </div>
          <section
            class="se_c4f6de"
          >
            <div
              class="li_e8499a"
            >
              <svg
                class="to_a744e4"
                height="20"
                viewBox="0 0 1792 1792"
                width="20"
              >
                <path
                  class="mi_4a8d0b"
                  d="M1344 800v64q0 14-9 23t-23 9h-832q-14 0-23-9t-9-23v-64q0-14 9-23t23-9h832q14 0 23 9t9 23zm128 448v-832q0-66-47-113t-113-47h-832q-66 0-113 47t-47 113v832q0 66 47 113t113 47h832q66 0 113-47t47-113zm128-832v832q0 119-84.5 203.5t-203.5 84.5h-832q-119 0-203.5-84.5t-84.5-203.5v-832q0-119 84.5-203.5t203.5-84.5h832q119 0 203.5 84.5t84.5 203.5z"
                />
                <path
                  class="pl_9ef1da"
                  d="M1344 800v64q0 14-9 23t-23 9h-352v352q0 14-9 23t-23 9h-64q-14 0-23-9t-9-23v-352h-352q-14 0-23-9t-9-23v-64q0-14 9-23t23-9h352v-352q0-14 9-23t23-9h64q14 0 23 9t9 23v352h352q14 0 23 9t9 23zm128 448v-832q0-66-47-113t-113-47h-832q-66 0-113 47t-47 113v832q0 66 47 113t113 47h832q66 0 113-47t47-113zm128-832v832q0 119-84.5 203.5t-203.5 84.5h-832q-119 0-203.5-84.5t-84.5-203.5v-832q0-119 84.5-203.5t203.5-84.5h832q119 0 203.5 84.5t84.5 203.5z"
                />
              </svg>
              <span
                class="ke_df9ddf"
              >
                "array"
              </span>
              <span
                class="se_830216"
              >
                :
              </span>
              <span
                class="va_2c711f"
                data-type="array"
              >
                Array[4] [1,2,3,"NaN"]
              </span>
              <span
                class="br_6fc46c"
              >
                [
              </span>
            </div>
            <section
              class="ch_fd9797"
              data-type="array"
            >
              <div
                class="li_e8499a"
              >
                <span
                  class="ke_df9ddf"
                >
                  "0"
                </span>
                <span
                  class="se_830216"
                >
                  :
                </span>
                <span
                  class="va_2c711f"
                  data-type="number"
                >
                  1
                </span>
                ,
              </div>
              <div
                class="li_e8499a"
              >
                <span
                  class="ke_df9ddf"
                >
                  "1"
                </span>
                <span
                  class="se_830216"
                >
                  :
                </span>
                <span
                  class="va_2c711f"
                  data-type="number"
                >
                  2
                </span>
                ,
              </div>
              <div
                class="li_e8499a"
              >
                <span
                  class="ke_df9ddf"
                >
                  "2"
                </span>
                <span
                  class="se_830216"
                >
                  :
                </span>
                <span
                  class="va_2c711f"
                  data-type="number"
                >
                  3
                </span>
                ,
              </div>
              <div
                class="li_e8499a"
              >
                <span
                  class="ke_df9ddf"
                >
                  "3"
                </span>
                <span
                  class="se_830216"
                >
                  :
                </span>
                <span
                  class="va_2c711f"
                  data-type="string"
                >
                  "NaN"
                </span>
              </div>
            </section>
            <div
              class="li_e8499a"
            >
              <span
                class="br_6fc46c"
              >
                ]
              </span>
              ,
            </div>
          </section>
          <div
            class="li_e8499a"
          >
            <span
              class="ke_df9ddf"
            >
              "float"
            </span>
            <span
              class="se_830216"
            >
              :
            </span>
            <span
              class="va_2c711f"
              data-type="number"
            >
              3.141
            </span>
            ,
          </div>
          <div
            class="li_e8499a"
          >
            <span
              class="ke_df9ddf"
            >
              "undefined"
            </span>
            <span
              class="se_830216"
            >
              :
            </span>
            <span
              class="va_2c711f"
              data-type="string"
            >
              "undefined"
            </span>
            ,
          </div>
          <section
            class="se_c4f6de"
          >
            <div
              class="li_e8499a"
            >
              <svg
                class="to_a744e4"
                height="20"
                viewBox="0 0 1792 1792"
                width="20"
              >
                <path
                  class="mi_4a8d0b"
                  d="M1344 800v64q0 14-9 23t-23 9h-832q-14 0-23-9t-9-23v-64q0-14 9-23t23-9h832q14 0 23 9t9 23zm128 448v-832q0-66-47-113t-113-47h-832q-66 0-113 47t-47 113v832q0 66 47 113t113 47h832q66 0 113-47t47-113zm128-832v832q0 119-84.5 203.5t-203.5 84.5h-832q-119 0-203.5-84.5t-84.5-203.5v-832q0-119 84.5-203.5t203.5-84.5h832q119 0 203.5 84.5t84.5 203.5z"
                />
                <path
                  class="pl_9ef1da"
                  d="M1344 800v64q0 14-9 23t-23 9h-352v352q0 14-9 23t-23 9h-64q-14 0-23-9t-9-23v-352h-352q-14 0-23-9t-9-23v-64q0-14 9-23t23-9h352v-352q0-14 9-23t23-9h64q14 0 23 9t9 23v352h352q14 0 23 9t9 23zm128 448v-832q0-66-47-113t-113-47h-832q-66 0-113 47t-47 113v832q0 66 47 113t113 47h832q66 0 113-47t47-113zm128-832v832q0 119-84.5 203.5t-203.5 84.5h-832q-119 0-203.5-84.5t-84.5-203.5v-832q0-119 84.5-203.5t203.5-84.5h832q119 0 203.5 84.5t84.5 203.5z"
                />
              </svg>
              <span
                class="ke_df9ddf"
              >
                "object"
              </span>
              <span
                class="se_830216"
              >
                :
              </span>
              <span
                class="va_2c711f"
                data-type="object"
              >
                Object {"first-child":true,"second-child":false,"last-child":"null"}
              </span>
              <span
                class="br_6fc46c"
              >
                {
              </span>
            </div>
            <section
              class="ch_fd9797"
              data-type="object"
            >
              <div
                class="li_e8499a"
              >
                <span
                  class="ke_df9ddf"
                >
                  "first-child"
                </span>
                <span
                  class="se_830216"
                >
                  :
                </span>
                <span
                  class="va_2c711f"
                  data-type="boolean"
                >
                  true
                </span>
                ,
              </div>
              <div
                class="li_e8499a"
              >
                <span
                  class="ke_df9ddf"
                >
                  "second-child"
                </span>
                <span
                  class="se_830216"
                >
                  :
                </span>
                <span
                  class="va_2c711f"
                  data-type="boolean"
                >
                  false
                </span>
                ,
              </div>
              <div
                class="li_e8499a"
              >
                <span
                  class="ke_df9ddf"
                >
                  "last-child"
                </span>
                <span
                  class="se_830216"
                >
                  :
                </span>
                <span
                  class="va_2c711f"
                  data-type="string"
                >
                  "null"
                </span>
              </div>
            </section>
            <div
              class="li_e8499a"
            >
              <span
                class="br_6fc46c"
              >
                }
              </span>
              ,
            </div>
          </section>
          <div
            class="li_e8499a"
          >
            <span
              class="ke_df9ddf"
            >
              "string_number"
            </span>
            <span
              class="se_830216"
            >
              :
            </span>
            <span
              class="va_2c711f"
              data-type="string"
            >
              "1234"
            </span>
          </div>
        </section>
        <div
          class="li_e8499a"
        >
          <span
            class="br_6fc46c"
          >
            }
          </span>
          ,
        </div>
      </section>
      <section
        class="se_c4f6de"
      >
        <div
          class="li_e8499a"
        >
          <svg
            class="to_a744e4"
            height="20"
            viewBox="0 0 1792 1792"
            width="20"
          >
            <path
              class="mi_4a8d0b"
              d="M1344 800v64q0 14-9 23t-23 9h-832q-14 0-23-9t-9-23v-64q0-14 9-23t23-9h832q14 0 23 9t9 23zm128 448v-832q0-66-47-113t-113-47h-832q-66 0-113 47t-47 113v832q0 66 47 113t113 47h832q66 0 113-47t47-113zm128-832v832q0 119-84.5 203.5t-203.5 84.5h-832q-119 0-203.5-84.5t-84.5-203.5v-832q0-119 84.5-203.5t203.5-84.5h832q119 0 203.5 84.5t84.5 203.5z"
            />
            <path
              class="pl_9ef1da"
              d="M1344 800v64q0 14-9 23t-23 9h-352v352q0 14-9 23t-23 9h-64q-14 0-23-9t-9-23v-352h-352q-14 0-23-9t-9-23v-64q0-14 9-23t23-9h352v-352q0-14 9-23t23-9h64q14 0 23 9t9 23v352h352q14 0 23 9t9 23zm128 448v-832q0-66-47-113t-113-47h-832q-66 0-113 47t-47 113v832q0 66 47 113t113 47h832q66 0 113-47t47-113zm128-832v832q0 119-84.5 203.5t-203.5 84.5h-832q-119 0-203.5-84.5t-84.5-203.5v-832q0-119 84.5-203.5t203.5-84.5h832q119 0 203.5 84.5t84.5 203.5z"
            />
          </svg>
          <span
            class="ke_df9ddf"
          >
            "1"
          </span>
          <span
            class="se_830216"
          >
            :
          </span>
          <span
            class="va_2c711f"
            data-type="object"
          >
            Object {"string":"this is a test ...","integer":42,"array":[1,2,3,"NaN"],"float":3.141,"undefined":"undefined","object":{"first-child":true,"second-child":false,"last-child":"null"},"string_number":"1234"}
          </span>
          <span
            class="br_6fc46c"
          >
            {
          </span>
        </div>
        <section
          class="ch_fd9797"
          data-type="object"
        >
          <div
            class="li_e8499a"
          >
            <span
              class="ke_df9ddf"
            >
              "string"
            </span>
            <span
              class="se_830216"
            >
              :
            </span>
            <span
              class="va_2c711f"
              data-type="string"
            >
              "this is a test ..."
            </span>
            ,
          </div>
          <div
            class="li_e8499a"
          >
            <span
              class="ke_df9ddf"
            >
              "integer"
            </span>
            <span
              class="se_830216"
            >
              :
            </span>
            <span
              class="va_2c711f"
              data-type="number"
            >
              42
            </span>
            ,
          </div>
          <section
            class="se_c4f6de"
          >
            <div
              class="li_e8499a"
            >
              <svg
                class="to_a744e4"
                height="20"
                viewBox="0 0 1792 1792"
                width="20"
              >
                <path
                  class="mi_4a8d0b"
                  d="M1344 800v64q0 14-9 23t-23 9h-832q-14 0-23-9t-9-23v-64q0-14 9-23t23-9h832q14 0 23 9t9 23zm128 448v-832q0-66-47-113t-113-47h-832q-66 0-113 47t-47 113v832q0 66 47 113t113 47h832q66 0 113-47t47-113zm128-832v832q0 119-84.5 203.5t-203.5 84.5h-832q-119 0-203.5-84.5t-84.5-203.5v-832q0-119 84.5-203.5t203.5-84.5h832q119 0 203.5 84.5t84.5 203.5z"
                />
                <path
                  class="pl_9ef1da"
                  d="M1344 800v64q0 14-9 23t-23 9h-352v352q0 14-9 23t-23 9h-64q-14 0-23-9t-9-23v-352h-352q-14 0-23-9t-9-23v-64q0-14 9-23t23-9h352v-352q0-14 9-23t23-9h64q14 0 23 9t9 23v352h352q14 0 23 9t9 23zm128 448v-832q0-66-47-113t-113-47h-832q-66 0-113 47t-47 113v832q0 66 47 113t113 47h832q66 0 113-47t47-113zm128-832v832q0 119-84.5 203.5t-203.5 84.5h-832q-119 0-203.5-84.5t-84.5-203.5v-832q0-119 84.5-203.5t203.5-84.5h832q119 0 203.5 84.5t84.5 203.5z"
                />
              </svg>
              <span
                class="ke_df9ddf"
              >
                "array"
              </span>
              <span
                class="se_830216"
              >
                :
              </span>
              <span
                class="va_2c711f"
                data-type="array"
              >
                Array[4] [1,2,3,"NaN"]
              </span>
              <span
                class="br_6fc46c"
              >
                [
              </span>
            </div>
            <section
              class="ch_fd9797"
              data-type="array"
            >
              <div
                class="li_e8499a"
              >
                <span
                  class="ke_df9ddf"
                >
                  "0"
                </span>
                <span
                  class="se_830216"
                >
                  :
                </span>
                <span
                  class="va_2c711f"
                  data-type="number"
                >
                  1
                </span>
                ,
              </div>
              <div
                class="li_e8499a"
              >
                <span
                  class="ke_df9ddf"
                >
                  "1"
                </span>
                <span
                  class="se_830216"
                >
                  :
                </span>
                <span
                  class="va_2c711f"
                  data-type="number"
                >
                  2
                </span>
                ,
              </div>
              <div
                class="li_e8499a"
              >
                <span
                  class="ke_df9ddf"
                >
                  "2"
                </span>
                <span
                  class="se_830216"
                >
                  :
                </span>
                <span
                  class="va_2c711f"
                  data-type="number"
                >
                  3
                </span>
                ,
              </div>
              <div
                class="li_e8499a"
              >
                <span
                  class="ke_df9ddf"
                >
                  "3"
                </span>
                <span
                  class="se_830216"
                >
                  :
                </span>
                <span
                  class="va_2c711f"
                  data-type="string"
                >
                  "NaN"
                </span>
              </div>
            </section>
            <div
              class="li_e8499a"
            >
              <span
                class="br_6fc46c"
              >
                ]
              </span>
              ,
            </div>
          </section>
          <div
            class="li_e8499a"
          >
            <span
              class="ke_df9ddf"
            >
              "float"
            </span>
            <span
              class="se_830216"
            >
              :
            </span>
            <span
              class="va_2c711f"
              data-type="number"
            >
              3.141
            </span>
            ,
          </div>
          <div
            class="li_e8499a"
          >
            <span
              class="ke_df9ddf"
            >
              "undefined"
            </span>
            <span
              class="se_830216"
            >
              :
            </span>
            <span
              class="va_2c711f"
              data-type="string"
            >
              "undefined"
            </span>
            ,
          </div>
          <section
            class="se_c4f6de"
          >
            <div
              class="li_e8499a"
            >
              <svg
                class="to_a744e4"
                height="20"
                viewBox="0 0 1792 1792"
                width="20"
              >
                <path
                  class="mi_4a8d0b"
                  d="M1344 800v64q0 14-9 23t-23 9h-832q-14 0-23-9t-9-23v-64q0-14 9-23t23-9h832q14 0 23 9t9 23zm128 448v-832q0-66-47-113t-113-47h-832q-66 0-113 47t-47 113v832q0 66 47 113t113 47h832q66 0 113-47t47-113zm128-832v832q0 119-84.5 203.5t-203.5 84.5h-832q-119 0-203.5-84.5t-84.5-203.5v-832q0-119 84.5-203.5t203.5-84.5h832q119 0 203.5 84.5t84.5 203.5z"
                />
                <path
                  class="pl_9ef1da"
                  d="M1344 800v64q0 14-9 23t-23 9h-352v352q0 14-9 23t-23 9h-64q-14 0-23-9t-9-23v-352h-352q-14 0-23-9t-9-23v-64q0-14 9-23t23-9h352v-352q0-14 9-23t23-9h64q14 0 23 9t9 23v352h352q14 0 23 9t9 23zm128 448v-832q0-66-47-113t-113-47h-832q-66 0-113 47t-47 113v832q0 66 47 113t113 47h832q66 0 113-47t47-113zm128-832v832q0 119-84.5 203.5t-203.5 84.5h-832q-119 0-203.5-84.5t-84.5-203.5v-832q0-119 84.5-203.5t203.5-84.5h832q119 0 203.5 84.5t84.5 203.5z"
                />
              </svg>
              <span
                class="ke_df9ddf"
              >
                "object"
              </span>
              <span
                class="se_830216"
              >
                :
              </span>
              <span
                class="va_2c711f"
                data-type="object"
              >
                Object {"first-child":true,"second-child":false,"last-child":"null"}
              </span>
              <span
                class="br_6fc46c"
              >
                {
              </span>
            </div>
            <section
              class="ch_fd9797"
              data-type="object"
            >
              <div
                class="li_e8499a"
              >
                <span
                  class="ke_df9ddf"
                >
                  "first-child"
                </span>
                <span
                  class="se_830216"
                >
                  :
                </span>
                <span
                  class="va_2c711f"
                  data-type="boolean"
                >
                  true
                </span>
                ,
              </div>
              <div
                class="li_e8499a"
              >
                <span
                  class="ke_df9ddf"
                >
                  "second-child"
                </span>
                <span
                  class="se_830216"
                >
                  :
                </span>
                <span
                  class="va_2c711f"
                  data-type="boolean"
                >
                  false
                </span>
                ,
              </div>
              <div
                class="li_e8499a"
              >
                <span
                  class="ke_df9ddf"
                >
                  "last-child"
                </span>
                <span
                  class="se_830216"
                >
                  :
                </span>
                <span
                  class="va_2c711f"
                  data-type="string"
                >
                  "null"
                </span>
              </div>
            </section>
            <div
              class="li_e8499a"
            >
              <span
                class="br_6fc46c"
              >
                }
              </span>
              ,
            </div>
          </section>
          <div
            class="li_e8499a"
          >
            <span
              class="ke_df9ddf"
            >
              "string_number"
            </span>
            <span
              class="se_830216"
            >
              :
            </span>
            <span
              class="va_2c711f"
              data-type="string"
            >
              "1234"
            </span>
          </div>
        </section>
        <div
          class="li_e8499a"
        >
          <span
            class="br_6fc46c"
          >
            }
          </span>
        </div>
      </section>
    </section>
    <div
      class="li_e8499a"
    >
      <span
        class="br_6fc46c"
      >
        ]
      </span>
    </div>
  </section>,
]
`;

exports[`json-viewer should be match object content 1`] = `
NodeList [
  <style>
    :host{--main-bg-color: #3a3c44;--main-color: #eee;--string-text-color: #f29766;--number-text-color: #77eda4;--boolean-text-color: #ed77e5;--null-text-color: #fff;position:relative;display:block;padding:.5rem 1rem;background-color:var(--main-bg-color);color:var(--main-color);font:400 14px/1.2rem monospace;text-rendering:optimizelegibility}:host .se_c4f6de .li_e8499a{display:block;white-space:nowrap;word-wrap:break-word}:host .se_c4f6de .li_e8499a .to_a744e4{display:inline-block;margin-top:-1px;margin-right:.2rem;margin-left:-0.47rem;width:1rem;height:1rem;color:#787878;vertical-align:middle}:host .se_c4f6de .li_e8499a .to_a744e4 .pl_9ef1da,:host .se_c4f6de .li_e8499a .to_a744e4 .mi_4a8d0b{fill:#787878}:host .se_c4f6de .li_e8499a .br_6fc46c{color:#898989}:host .se_c4f6de .li_e8499a .ke_df9ddf{color:#cfd0d0}:host .se_c4f6de .li_e8499a .se_830216{margin:0 6px 0 2px;color:#898989}:host .se_c4f6de .li_e8499a .si_94a13e{margin-left:8px;color:#747272;font-size:.8rem;font-style:italic;user-select:none;vertical-align:middle}:host .se_c4f6de .li_e8499a .va_2c711f[data-type=string]{color:var(--string-text-color)}:host .se_c4f6de .li_e8499a .va_2c711f[data-type=number]{color:var(--number-text-color)}:host .se_c4f6de .li_e8499a .va_2c711f[data-type=boolean]{color:var(--boolean-text-color)}:host .se_c4f6de .li_e8499a .va_2c711f[data-type=null],:host .se_c4f6de .li_e8499a .va_2c711f[data-type=undefined]{color:var(--null-text-color)}:host .se_c4f6de .li_e8499a .va_2c711f[data-type=array],:host .se_c4f6de .li_e8499a .va_2c711f[data-type=object]{overflow:hidden;width:90%;color:#747272;font-size:.8rem;font-style:italic;vertical-align:middle}:host .se_c4f6de&gt;.li_e8499a{cursor:pointer}:host .se_c4f6de&gt;.li_e8499a:hover&gt;.ke_df9ddf{color:#e7e7e7}:host .se_c4f6de&gt;.li_e8499a:hover&gt;.to_a744e4 .pl_9ef1da,:host .se_c4f6de&gt;.li_e8499a:hover&gt;.to_a744e4 .mi_4a8d0b{fill:#979797}:host .se_c4f6de&gt;.ch_fd9797{padding-left:1rem;border-left:1px dotted #585855}:host .se_c4f6de&gt;.ch_fd9797[data-type=array]&gt;.li_e8499a&gt;.ke_df9ddf,:host .se_c4f6de&gt;.ch_fd9797[data-type=array]&gt;.li_e8499a&gt;.se_830216{color:#747272;user-select:none}:host .se_c4f6de[aria-expanded=true]&gt;.li_e8499a&gt;.to_a744e4 .pl_9ef1da{display:none}:host .se_c4f6de[aria-expanded=true]&gt;.li_e8499a&gt;.to_a744e4 .mi_4a8d0b{display:inline-block}:host .se_c4f6de[aria-expanded=true]&gt;.li_e8499a&gt;.va_2c711f{display:none}:host .se_c4f6de[aria-expanded=false]&gt;.li_e8499a&gt;.to_a744e4 .pl_9ef1da{display:inline-block}:host .se_c4f6de[aria-expanded=false]&gt;.li_e8499a&gt;.to_a744e4 .mi_4a8d0b{display:none}:host .se_c4f6de[aria-expanded=false]&gt;.li_e8499a&gt;.va_2c711f{display:inline-block}:host .se_c4f6de[aria-expanded=false]&gt;.li_e8499a&gt;.br_6fc46c,:host .se_c4f6de[aria-expanded=false]&gt;.li_e8499a&gt;.si_94a13e,:host .se_c4f6de[aria-expanded=false]&gt;.li_e8499a&gt;.to_a744e4 .mi_4a8d0b,:host .se_c4f6de[aria-expanded=false]&gt;:last-child,:host .se_c4f6de[aria-expanded=false]&gt;.ch_fd9797{display:none}:host .se_c4f6de:hover&gt;.ch_fd9797{border-color:#858580}:host .se_c4f6de:hover&gt;.li_e8499a&gt;.br_6fc46c{color:#fffff7}
  </style>,
  <section
    class="se_c4f6de"
  >
    <div
      class="li_e8499a"
    >
      <svg
        class="to_a744e4"
        height="20"
        viewBox="0 0 1792 1792"
        width="20"
      >
        <path
          class="mi_4a8d0b"
          d="M1344 800v64q0 14-9 23t-23 9h-832q-14 0-23-9t-9-23v-64q0-14 9-23t23-9h832q14 0 23 9t9 23zm128 448v-832q0-66-47-113t-113-47h-832q-66 0-113 47t-47 113v832q0 66 47 113t113 47h832q66 0 113-47t47-113zm128-832v832q0 119-84.5 203.5t-203.5 84.5h-832q-119 0-203.5-84.5t-84.5-203.5v-832q0-119 84.5-203.5t203.5-84.5h832q119 0 203.5 84.5t84.5 203.5z"
        />
        <path
          class="pl_9ef1da"
          d="M1344 800v64q0 14-9 23t-23 9h-352v352q0 14-9 23t-23 9h-64q-14 0-23-9t-9-23v-352h-352q-14 0-23-9t-9-23v-64q0-14 9-23t23-9h352v-352q0-14 9-23t23-9h64q14 0 23 9t9 23v352h352q14 0 23 9t9 23zm128 448v-832q0-66-47-113t-113-47h-832q-66 0-113 47t-47 113v832q0 66 47 113t113 47h832q66 0 113-47t47-113zm128-832v832q0 119-84.5 203.5t-203.5 84.5h-832q-119 0-203.5-84.5t-84.5-203.5v-832q0-119 84.5-203.5t203.5-84.5h832q119 0 203.5 84.5t84.5 203.5z"
        />
      </svg>
      <span
        class="va_2c711f"
        data-type="object"
      >
        Object {"string":"this is a test ...","integer":42,"array":[1,2,3,"NaN"],"float":3.141,"undefined":"undefined","object":{"first-child":true,"second-child":false,"last-child":"null"},"string_number":"1234"}
      </span>
      <span
        class="br_6fc46c"
      >
        {
      </span>
    </div>
    <section
      class="ch_fd9797"
      data-type="object"
    >
      <div
        class="li_e8499a"
      >
        <span
          class="ke_df9ddf"
        >
          "string"
        </span>
        <span
          class="se_830216"
        >
          :
        </span>
        <span
          class="va_2c711f"
          data-type="string"
        >
          "this is a test ..."
        </span>
        ,
      </div>
      <div
        class="li_e8499a"
      >
        <span
          class="ke_df9ddf"
        >
          "integer"
        </span>
        <span
          class="se_830216"
        >
          :
        </span>
        <span
          class="va_2c711f"
          data-type="number"
        >
          42
        </span>
        ,
      </div>
      <section
        class="se_c4f6de"
      >
        <div
          class="li_e8499a"
        >
          <svg
            class="to_a744e4"
            height="20"
            viewBox="0 0 1792 1792"
            width="20"
          >
            <path
              class="mi_4a8d0b"
              d="M1344 800v64q0 14-9 23t-23 9h-832q-14 0-23-9t-9-23v-64q0-14 9-23t23-9h832q14 0 23 9t9 23zm128 448v-832q0-66-47-113t-113-47h-832q-66 0-113 47t-47 113v832q0 66 47 113t113 47h832q66 0 113-47t47-113zm128-832v832q0 119-84.5 203.5t-203.5 84.5h-832q-119 0-203.5-84.5t-84.5-203.5v-832q0-119 84.5-203.5t203.5-84.5h832q119 0 203.5 84.5t84.5 203.5z"
            />
            <path
              class="pl_9ef1da"
              d="M1344 800v64q0 14-9 23t-23 9h-352v352q0 14-9 23t-23 9h-64q-14 0-23-9t-9-23v-352h-352q-14 0-23-9t-9-23v-64q0-14 9-23t23-9h352v-352q0-14 9-23t23-9h64q14 0 23 9t9 23v352h352q14 0 23 9t9 23zm128 448v-832q0-66-47-113t-113-47h-832q-66 0-113 47t-47 113v832q0 66 47 113t113 47h832q66 0 113-47t47-113zm128-832v832q0 119-84.5 203.5t-203.5 84.5h-832q-119 0-203.5-84.5t-84.5-203.5v-832q0-119 84.5-203.5t203.5-84.5h832q119 0 203.5 84.5t84.5 203.5z"
            />
          </svg>
          <span
            class="ke_df9ddf"
          >
            "array"
          </span>
          <span
            class="se_830216"
          >
            :
          </span>
          <span
            class="va_2c711f"
            data-type="array"
          >
            Array[4] [1,2,3,"NaN"]
          </span>
          <span
            class="br_6fc46c"
          >
            [
          </span>
        </div>
        <section
          class="ch_fd9797"
          data-type="array"
        >
          <div
            class="li_e8499a"
          >
            <span
              class="ke_df9ddf"
            >
              "0"
            </span>
            <span
              class="se_830216"
            >
              :
            </span>
            <span
              class="va_2c711f"
              data-type="number"
            >
              1
            </span>
            ,
          </div>
          <div
            class="li_e8499a"
          >
            <span
              class="ke_df9ddf"
            >
              "1"
            </span>
            <span
              class="se_830216"
            >
              :
            </span>
            <span
              class="va_2c711f"
              data-type="number"
            >
              2
            </span>
            ,
          </div>
          <div
            class="li_e8499a"
          >
            <span
              class="ke_df9ddf"
            >
              "2"
            </span>
            <span
              class="se_830216"
            >
              :
            </span>
            <span
              class="va_2c711f"
              data-type="number"
            >
              3
            </span>
            ,
          </div>
          <div
            class="li_e8499a"
          >
            <span
              class="ke_df9ddf"
            >
              "3"
            </span>
            <span
              class="se_830216"
            >
              :
            </span>
            <span
              class="va_2c711f"
              data-type="string"
            >
              "NaN"
            </span>
          </div>
        </section>
        <div
          class="li_e8499a"
        >
          <span
            class="br_6fc46c"
          >
            ]
          </span>
          ,
        </div>
      </section>
      <div
        class="li_e8499a"
      >
        <span
          class="ke_df9ddf"
        >
          "float"
        </span>
        <span
          class="se_830216"
        >
          :
        </span>
        <span
          class="va_2c711f"
          data-type="number"
        >
          3.141
        </span>
        ,
      </div>
      <div
        class="li_e8499a"
      >
        <span
          class="ke_df9ddf"
        >
          "undefined"
        </span>
        <span
          class="se_830216"
        >
          :
        </span>
        <span
          class="va_2c711f"
          data-type="string"
        >
          "undefined"
        </span>
        ,
      </div>
      <section
        class="se_c4f6de"
      >
        <div
          class="li_e8499a"
        >
          <svg
            class="to_a744e4"
            height="20"
            viewBox="0 0 1792 1792"
            width="20"
          >
            <path
              class="mi_4a8d0b"
              d="M1344 800v64q0 14-9 23t-23 9h-832q-14 0-23-9t-9-23v-64q0-14 9-23t23-9h832q14 0 23 9t9 23zm128 448v-832q0-66-47-113t-113-47h-832q-66 0-113 47t-47 113v832q0 66 47 113t113 47h832q66 0 113-47t47-113zm128-832v832q0 119-84.5 203.5t-203.5 84.5h-832q-119 0-203.5-84.5t-84.5-203.5v-832q0-119 84.5-203.5t203.5-84.5h832q119 0 203.5 84.5t84.5 203.5z"
            />
            <path
              class="pl_9ef1da"
              d="M1344 800v64q0 14-9 23t-23 9h-352v352q0 14-9 23t-23 9h-64q-14 0-23-9t-9-23v-352h-352q-14 0-23-9t-9-23v-64q0-14 9-23t23-9h352v-352q0-14 9-23t23-9h64q14 0 23 9t9 23v352h352q14 0 23 9t9 23zm128 448v-832q0-66-47-113t-113-47h-832q-66 0-113 47t-47 113v832q0 66 47 113t113 47h832q66 0 113-47t47-113zm128-832v832q0 119-84.5 203.5t-203.5 84.5h-832q-119 0-203.5-84.5t-84.5-203.5v-832q0-119 84.5-203.5t203.5-84.5h832q119 0 203.5 84.5t84.5 203.5z"
            />
          </svg>
          <span
            class="ke_df9ddf"
          >
            "object"
          </span>
          <span
            class="se_830216"
          >
            :
          </span>
          <span
            class="va_2c711f"
            data-type="object"
          >
            Object {"first-child":true,"second-child":false,"last-child":"null"}
          </span>
          <span
            class="br_6fc46c"
          >
            {
          </span>
        </div>
        <section
          class="ch_fd9797"
          data-type="object"
        >
          <div
            class="li_e8499a"
          >
            <span
              class="ke_df9ddf"
            >
              "first-child"
            </span>
            <span
              class="se_830216"
            >
              :
            </span>
            <span
              class="va_2c711f"
              data-type="boolean"
            >
              true
            </span>
            ,
          </div>
          <div
            class="li_e8499a"
          >
            <span
              class="ke_df9ddf"
            >
              "second-child"
            </span>
            <span
              class="se_830216"
            >
              :
            </span>
            <span
              class="va_2c711f"
              data-type="boolean"
            >
              false
            </span>
            ,
          </div>
          <div
            class="li_e8499a"
          >
            <span
              class="ke_df9ddf"
            >
              "last-child"
            </span>
            <span
              class="se_830216"
            >
              :
            </span>
            <span
              class="va_2c711f"
              data-type="string"
            >
              "null"
            </span>
          </div>
        </section>
        <div
          class="li_e8499a"
        >
          <span
            class="br_6fc46c"
          >
            }
          </span>
          ,
        </div>
      </section>
      <div
        class="li_e8499a"
      >
        <span
          class="ke_df9ddf"
        >
          "string_number"
        </span>
        <span
          class="se_830216"
        >
          :
        </span>
        <span
          class="va_2c711f"
          data-type="string"
        >
          "1234"
        </span>
      </div>
    </section>
    <div
      class="li_e8499a"
    >
      <span
        class="br_6fc46c"
      >
        }
      </span>
    </div>
  </section>,
]
`;
